css/style.css
:root{
    .limelight-regular {
        font-family: "Limelight", sans-serif;
        font-weight: 400;
        font-style: normal;
}

}


body {
    margin: 0px;
}

#fullheader{
    display: grid;
    grid-template-columns: 2;
    grid-template-rows: 1;
    background-color: gray;

    #title{
        grid-column: 1;
        grid-row: 1;
        font-family: "Limelight", sans-serif;
        font-weight: 400;
        font-style: normal;
    }

    nav{
        height: 100%;
        grid-column: 2;
        grid-row: 1;
    }
    #navmenu{
        margin: 0px;
        height: 100%;
        display: flex;
        list-style-type: none;
        justify-content: right;
        align-items: center;
        flex-wrap: wrap;
        gap: 30px;
}

}

